<resources>
    <string name="app_name">PiedraPapelTijeras</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="jugador_1">Jugador 1</string>
    <string name="tListoJ1">...</string>
    <string name="scorej1">Score: 0</string>
    <string name="tRonda">Ronda: 1</string>
    <string name="jugador_2">Jugador 2</string>
    <string name="t_listo_j2">...</string>
    <string name="scorej2">Score: 0</string>
    <string name="ganador">¿Quién ganará?</string>
    <string name="piedra">Piedra</string>
    <string name="papel">Papel</string>
    <string name="tijeras">Tijeras</string>
    <string name="resolver">Resolver</string>
    <string name="nuevo_juego">Nuevo Juego</string>
    <string name="nueva_ronda">Nueva Ronda</string>
    <string name="listo">¡Listo!</string>
    <string name="tcuentaRonda">Ronda: </string>
    <string name="score">Score: </string>
    <string name="empate">Hay un empate...</string>
    <string name="ganaj1">¡Ha ganado el Jugador 1!</string>
    <string name="ganaj2">¡Ha ganado el Jugador 2!</string>
</resources>