<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/LinearLayoutJ1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tJ1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jugador_1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tListoJ1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tListoJ1"
                android:textAlignment="center"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/tScoreJ1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scorej1"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutRonda"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tRonda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tRonda" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutJ2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tJ2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jugador_2" />

            <TextView
                android:id="@+id/tListoJ2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_listo_j2"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/tScoreJ2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scorej2" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>